k8s/talos/apps/trek/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trek
  annotations:
    volsync.backube/privileged-movers: "true"
