k8s/talos/apps/trek/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trek-service
  namespace: trek
spec:
  selector:
    app: trek
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
