k8s/talos/apps/trek/ciliumnetworkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: trek-policy
  namespace: trek
spec:
  endpointSelector:
    matchLabels:
      app: trek
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
            "k8s:app.kubernetes.io/instance": traefik-traefik
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": keda
            "k8s:app.kubernetes.io/component": interceptor
            "k8s:app.kubernetes.io/part-of": keda-add-ons-http
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEntities:
        - host
        - health
